# tides-server/swagger/swagger.yml
@@ -2443,6 +2443,10 @@ paths:
                   type: string
                 sshPort:
                   type: string
+                createAt:
+                  type: string
+                runningTime:
+                  type: string
                 extra:
                   type: object
         401:
